--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ install:
 
   - conda env create -f regridder/regrid.yml
   - source activate regrid
+  - wget http://s3-ap-southeast-2.amazonaws.com/dp-drop/ocean-nudge/grid_defs.tar.gz
+  - tar zxf grid_defs.tar.gz
   - cd regridder/contrib
   - source build_esmf.sh
   - cd ../../
